# offline_data_driven_moea

./: .gitignore  Example.ipynb  Main_Execute.py  README.md  StartAll.py  SurrogateKriging.py  csv_converter_all.py  plot_progress_RMSE.py  pyproject.toml  pyprojectxx.toml  test1.ipynb  test2.ipynb  test_basic.ipynb
AM_Samples_109_Final/: DDMOPP_Params_LHS_P1_10_10_109.mat  DDMOPP_Params_LHS_P1_2_10_109.mat  DDMOPP_Params_LHS_P1_3_10_109.mat  DDMOPP_Params_LHS_P1_4_10_109.mat  DDMOPP_Params_LHS_P1_5_10_109.mat  DDMOPP_Params_LHS_P1_6_10_109.mat  DDMOPP_Params_LHS_P1_8_10_109.mat  DDMOPP_Params_LHS_P2_10_10_109.mat  DDMOPP_Params_LHS_P2_2_10_109.mat  DDMOPP_Params_LHS_P2_3_10_109.mat  DDMOPP_Params_LHS_P2_4_10_109.mat  DDMOPP_Params_LHS_P2_5_10_109.mat  DDMOPP_Params_LHS_P2_6_10_109.mat  DDMOPP_Params_LHS_P2_8_10_109.mat  DDMOPP_Params_MVNORM_P1_10_10_109.mat  DDMOPP_Params_MVNORM_P1_2_10_109.mat  DDMOPP_Params_MVNORM_P1_3_10_109.mat  DDMOPP_Params_MVNORM_P1_4_10_109.mat  DDMOPP_Params_MVNORM_P1_5_10_109.mat  DDMOPP_Params_MVNORM_P1_6_10_109.mat  DDMOPP_Params_MVNORM_P1_8_10_109.mat  DDMOPP_Params_MVNORM_P2_10_10_109.mat  DDMOPP_Params_MVNORM_P2_2_10_109.mat  DDMOPP_Params_MVNORM_P2_3_10_109.mat  DDMOPP_Params_MVNORM_P2_4_10_109.mat  DDMOPP_Params_MVNORM_P2_5_10_109.mat  DDMOPP_Params_MVNORM_P2_6_10_109.mat  DDMOPP_Params_MVNORM_P2_8_10_109.mat  Initial_Population_DDMOPP_LHS_AM_10_109.mat  Initial_Population_DDMOPP_MVNORM_AM_10_109.mat  Initial_Population_DTLZ_LHS_AM_10_109.mat  Initial_Population_DTLZ_MVNORM_AM_10_109.mat  Obj_vals_DDMOPP_LHS_AM_P1_10_10_109.mat  (+27 more)
(+77 files in other folders)
