[tool.poetry]
name = "offline_data_driven_moea"
version = "0.1.0"
description = ""
authors = ["amrzr <amznit@gmail.com>"]

[tool.poetry.dependencies]
python =  ">=3.8,<3.10"
numpy = "^1.20.3"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
plotly = "^4.14.3"
sklearn = "^0.0"
scipy = "^1.6.3"
pygmo = "^2.16.1"
optproblems = "^1.3"
tqdm = "^4.61.0"
diversipy = "^0.8"
pyDOE = "^0.3.8"
joblib = "^1.0.1"
statsmodels = "^0.12.2"
seaborn = "^0.11.2"
pymop = "^0.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
